devops303/ingress_devops303.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops303
spec:
  rules:    
  - host: devops303.julie
    http:
      paths:          
        - path: /     
          pathType: Prefix
          backend:
            service:
              name: devops303
              port:
                number: 80
